# Enterprise_GenAI

./: .env.example  Makefile  README.md  pyproject.toml
config/: init.py  settings.py
